remove ImagePanel.java since it is not used anymore

--- a/pictures_new/build.xml
+++ b/pictures_new/build.xml
@@ -54,9 +54,7 @@
 		</java>
 	</target>
 	<target description="Generate pictures.jar" name="build-jar">
-		<jar destfile="pictures.jar" basedir="bin" 
-			includes="**/*" excludes="*.jar"/>
-		<jar update="true" destfile="pictures.jar" basedir="src" 
-					includes="**/*" />
+		<jar destfile="pictures.jar" basedir="bin" includes="**/*" excludes="*.jar" />
+		<jar update="true" destfile="pictures.jar" basedir="src" includes="**/*" />
 	</target>
 </project>
