--- a/StockWatcher/build.xml
+++ b/StockWatcher/build.xml
@@ -76,7 +76,7 @@
       	<pathelement location="src" />
       	<pathelement location="test" />
         <path refid="project.class.path" />
-        <pathelement location="path_to_the_junit_jar" />
+        <pathelement location="/usr/share/java/junit4.jar" />
       </classpath>
       <batchtest todir="reports/htmlunit.dev" >
         <fileset dir="test" >
@@ -98,7 +98,7 @@
         <pathelement location="src" />
         <pathelement location="test" />
         <path refid="project.class.path" />
-        <pathelement location="path_to_the_junit_jar" />
+        <pathelement location="/usr/share/java/junit4.jar" />
       </classpath>
       <batchtest todir="reports/htmlunit.prod" >
         <fileset dir="test" >
