try to implement RPC service

--- a/StockWatcher/war/WEB-INF/web.xml
+++ b/StockWatcher/war/WEB-INF/web.xml
@@ -6,11 +6,16 @@
          xmlns="http://java.sun.com/xml/ns/javaee">
 
   <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.google.gwt.sample.stockwatcher.server.GreetingServiceImpl</servlet-class>
-  </servlet>
-  
+    <servlet>
+        <servlet-name>stockPriceServiceImpl</servlet-name>
+        <servlet-class>com.google.gwt.sample.stockwatcher.server.StockPriceServiceImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>stockPriceServiceImpl</servlet-name>
+        <url-pattern>/stockwatcher/stockPrices</url-pattern>
+    </servlet-mapping>
+
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/stockwatcher/greet</url-pattern>
