--- a/StockWatcher/build.xml
+++ b/StockWatcher/build.xml
@@ -61,7 +61,7 @@
     <javac srcdir="test" includes="**" encoding="utf-8"
       source="1.5" target="1.5" nowarn="true"
       debug="true" debuglevel="lines,vars,source">
-      <classpath location="path_to_the_junit_jar"/>
+      <classpath location="/usr/share/java/junit4.jar"/>
       <classpath refid="project.class.path"/>
     </javac>
   </target>
