--- a/StockWatcher/war/WEB-INF/web.xml
+++ b/StockWatcher/war/WEB-INF/web.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-              http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5"
-         xmlns="http://java.sun.com/xml/ns/javaee">
+<!DOCTYPE web-app
+        PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-  <!-- Servlets -->
-    <servlet>
-        <servlet-name>stockPriceServiceImpl</servlet-name>
-        <servlet-class>com.google.gwt.sample.stockwatcher.server.StockPriceServiceImpl</servlet-class>
-    </servlet>
+<web-app>
 
-    <servlet-mapping>
-        <servlet-name>stockPriceServiceImpl</servlet-name>
-        <url-pattern>/stockwatcher/stockPrices</url-pattern>
-    </servlet-mapping>
+    <web-app>
 
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>StockWatcher.html</welcome-file>
-  </welcome-file-list>
+        <!-- Default page to serve -->
+        <welcome-file-list>
+            <welcome-file>StockWatcher.html</welcome-file>
+        </welcome-file-list>
 
+        <!-- Servlets -->
+        <servlet>
+            <servlet-name>stockPriceServiceImpl</servlet-name>
+            <servlet-class>com.google.gwt.sample.stockwatcher.server.StockPriceServiceImpl</servlet-class>
+        </servlet>
+
+        <servlet-mapping>
+            <servlet-name>stockPriceServiceImpl</servlet-name>
+            <url-pattern>/stockwatcher/stockPrices</url-pattern>
+        </servlet-mapping>
+
+    </web-app>
 </web-app>
